[package]
name = "vec-with-gaps"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "A data structure that behaves like a vec of vecs, but where the subvecs are kept contiguous in memory, potentially improving cache performance for some workloads"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.4"
itertools = "0.10.1"