[package]
name = "vec-with-gaps"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/makoConstruct/vec-with-gaps"
description = "A data structure that behaves like a vec of vecs, but where the subvecs are kept contiguous in memory, potentially improving cache performance for some workloads"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
pcg = "4.1.0"
itertools = "0.8.2"